Fixed services section boxes for last row center alignment.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1203 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common-component.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/common-component.css
@@ -866,3 +866,15 @@ input[type="checkbox"]+label:before {
 input[type="checkbox"]:checked+label:before {
     background-position: 0 -20px;
 }
+
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    text-align:left;
+    margin-right:-4px;
+    vertical-align:top;
+}
